tests/pass/Default.java
package pass;

public class Default {
  public boolean testDefault(String defaultString) {
    return defaultString == defaultString;
  }
}
