tests/fail/LongLiteral.java
package fail;

import java.lang.System;

public class LongLiteral {

  public static void main(String[] args ) {
    String cat = "cat";
    long cat;
  }

}
